--- a/index.css
+++ b/index.css
@@ -136,19 +136,17 @@
       gap: 30px;
       flex-wrap: wrap;
 
-      .title-price-container {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-
+      .author-pages-container {
+  
         p label {
-          margin-right: 10px;
+          margin-right: 80px;
           font-weight: 600;
         }
 
         p input {
            padding-left: 7px;
           border-bottom: 1px solid gray;
+          margin-bottom: 2em;
         }
       }
 
@@ -161,7 +159,7 @@
         }
         
         textarea {
-          height: 100px;
+          height: 120px;
           width: 100%;
           padding: 15px 5 5 15px;
         }
