--- a/index.css
+++ b/index.css
@@ -49,7 +49,7 @@
 
     /* ----------------Dialog Style start-------------- */
 
-    dialog:open {
+    dialog[open] {
       opacity: 1;
       transform: scaleY(1);
     }
