--- a/index.css
+++ b/index.css
@@ -4,9 +4,9 @@
 
 .container {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 330px 1fr;
   grid-template-rows: 120px 1fr;
-  column-gap: 50px;
+  column-gap: 5px;
 }
 
 .nav {
