--- a/index.css
+++ b/index.css
@@ -358,3 +358,13 @@
   }
 }
 
+
+#hint {
+      display: none;       
+      position: absolute;
+      background: black;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+    }
